welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:14: error: not found: value faireFleureSimple
	faireFleureSimple(Color.orange)
        ^